--- a/public/index.html
+++ b/public/index.html
@@ -32,24 +32,20 @@
                 width: 200px; height: 100px;
                 border-radius: 100%;
             }
-            
-            #rojo {
-                background: red;
-            }
         </style>
     </head>
     <body>
         <template id="game-template">
-            <button data-id="0" data-x="600" data-y="500" class="game-prop game-button" id="rojo" onclick="alert('hi')">
+            <button data-id="0" data-x="600" data-y="500" class="game-prop game-button">
                 INICIO
             </button>
-            <button data-id="1" data-x="30" data-y="30" class="game-prop game-button" id="rojo" onclick="alert('hi')">
+            <button data-id="1" data-x="30" data-y="30" class="game-prop game-button">
                 Hola mundo
             </button>
-            <button data-id="2" data-x="250" data-y="30" class="game-prop game-button" id="rojo" onclick="alert('hi')">
+            <button data-id="2" data-x="250" data-y="30" class="game-prop game-button">
                 Hola mundo
             </button>
-            <button data-id="3" data-x="500" data-y="30" class="game-prop game-button" id="rojo" onclick="alert('hi')">
+            <button data-id="3" data-x="500" data-y="30" class="game-prop game-button">
                 Hola mundo
             </button>
         </template>
